Fixed spacing issue on Achievements Listing Page

--- a/site/static/scss/styles.scss
+++ b/site/static/scss/styles.scss
@@ -617,6 +617,7 @@ a {
 /* Achievements - Trophy Case */
 .trophy-case {
     .achievement-container {
+        margin-top: 0;
         .achievement {
             background-color: #fff;
             border-radius: 9px;
